Added schema initialization