@@ -1,13 +1,12 @@
 package home.four.you.security;
 
+import home.four.you.model.entity.Role;
 import home.four.you.model.entity.User;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Custom implementation of {@link UserDetails}.
@@ -22,9 +21,11 @@ public class Home4YouUserPrincipal implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        List<GrantedAuthority> list = user.getRoles().stream().map(role -> new SimpleGrantedAuthority(role.getRole()))
-                .collect(Collectors.toList());
-        return list;
+        return user.getRoles().stream()
+                .map(Role::getRole)
+                .map(Role.AuthorityRole::toString)
+                .map(SimpleGrantedAuthority::new)
+                .toList();
     }
 
     @Override
@@ -34,7 +35,7 @@ public class Home4YouUserPrincipal implements UserDetails {
 
     @Override
     public String getUsername() {
-        return user.getUsername();
+        return user.getEmail();
     }
 
     @Override
